--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<p>My current favourite song is <song_name></p>
+		My current favourite song is <song_name>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
