--- a/main.html
+++ b/main.html
@@ -8,9 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-		My current favourite song is <song_name>
-	</div>
+	<div>My current favourite song is <a href="https://www.youtube.com/watch?v=cAMHx-m9oh8&list=RDcAMHx-m9oh8&start_radio=1&ab_channel=DM-DesiMelodies"></a</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
